[package]
name = "obs-local-oauth"
version = "0.1.0"
authors = ["Eragon"]
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

oauth2 = "4.3"
warp = "0.3"
lazy_static = "1.4"
log = "0.4"

# This could be replaced by an other logging library
[dependencies.elog]
git = "https://git.eragon.re/Electrolyte/elog.git"
version = "*"
